Trying a different toml redirect setting. This exact case isn't spelled out in the docs. First try didn't work. minor content edits

--- a/source/platform/index.html.erb
+++ b/source/platform/index.html.erb
@@ -38,7 +38,7 @@ priority: "0.9"
                 :locals => {
                     :label => "Explore capabilities",
                     :title => "Explore the capabilities of the Datica Platform",
-                    :url => "/compliance",
+                    :url => "/technology",
                     # :rel => "external",
                     :button_classes => "button hollow",
                     # :icon => "icon-chevron-right",
