working on sensible toggle component attempt on toml settings from support

--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 @import '../settings';
-@import '../../../../node_modules/foundation-sites/scss/util/_mixins.scss';
+@import 'node_modules/foundation-sites/scss/util/_mixins.scss';
 // @import '../../../../node_modules/foundation-sites/scss/components/_callout.scss';
 @import 'node_modules/foundation-sites/scss/components/_off-canvas.scss';
 @import '../mixins/colors';
@@ -9,7 +9,42 @@
 // @import '../vendor/slick';
 // @import '../modules/masonry';
 // @import '../modules/fonts-optional';
-@include foundation-off-canvas;
+// @include foundation-off-canvas;
+
+@include keyframes( expando ) {
+    0% {
+        height: 0px;
+        opacity: 0;
+    }
+    // 50% {
+        
+    // }
+    100% {
+        height: auto;
+        opacity: 1;
+    }
+}
+.is-toggle {
+    @include transition(color $timing-default);
+    &[aria-expanded="true"] {
+        color: black;
+    }
+    &[aria-expanded="false"] {
+        color: $color_prime-alt;
+    }
+}
+.show-more {
+    &--container {
+        display: none;
+        // height: 0;
+        &[aria-hidden='false'] { // ZF toggler
+            display: inline-block;
+            @include animation (expando 0.3s ease);
+        }
+    }
+}
+        
+// @include transition(opacity $timing-default);
 
 .platform { // this is injected into body via MM
     #topNavCTA { // override, as is not primary cta
