--- a/source/assets/scss/seldon.scss
+++ b/source/assets/scss/seldon.scss
@@ -3,7 +3,7 @@
 @import 'settings';
 // // We want the uncompiled sass, so that we can leverage the settings files.
 @import 'node_modules/foundation-sites/scss/foundation.scss';
-
+@import 'node_modules/motion-ui/src/motion-ui';
 @include foundation-global-styles;
 // @include foundation-grid;
 @include foundation-flex-grid;
