--- a/source/platform/technology.html.erb
+++ b/source/platform/technology.html.erb
@@ -14,6 +14,16 @@ collectionName: "platform"
 collectionOrder: 2
 ctaCustom: true
 ---
+<svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<defs>
+<symbol id="icon-plus-disc" viewBox="0 0 32 32"><title>plus-disc</title>
+<g fill-rule="evenodd">
+    <path fill="currentColor" class="disc" fill-rule="nonzero" d="M16,32 C7.163,32 0,24.837 0,16 C0,7.163 7.163,0 16,0 C24.837,0 32,7.163 32,16 C32,24.837 24.837,32 16,32 Z M16,28.8 C23.069,28.8 28.8,23.069 28.8,16 C28.8,8.931 23.069,3.2 16,3.2 C8.931,3.2 3.2,8.931 3.2,16 C3.2,23.069 8.931,28.8 16,28.8 Z"/>
+    <polygon fill="currentColor" class="plus" points="9.6 6.4 16 6.4 16 9.6 9.6 9.6 9.6 16 6.4 16 6.4 9.6 0 9.6 0 6.4 6.4 6.4 6.4 0 9.6 0" transform="translate(8 8)"/>
+  </g>
+</symbol>
+</defs>
+</svg>
 <aside class="hide-for-large pad--sm container-color--blue-alt">
     <div class="row align-middle align-center">
         <div class="columns small-6 medium-4">
@@ -59,11 +69,20 @@ ctaCustom: true
                 <% end %>
             </div>
         </div>
-        <div class="row small-up-2 medium-up-2 large-up-3 xlarge-up-4 group--2x">
+        <div class="row small-up-2 medium-up-2 large-up-3 xlarge-up-3 group--2x">
             <% if featureCat.has_key?("related_features") %>
                 <% featureCat["related_features"].each do | feature | %>
-                    <div class="column">
-                        <h4 class="headline-6<% if feature.has_key?('desc') %> is-toggle<% end %>" data-toggle="feature-detail_<%= feature.slug %>"><%= feature.title %></h4>
+                    <div class="column feature-item">
+                        <% if feature.has_key?('desc') %>
+                            <h4 class="headline-6 is-toggle" data-toggle="feature-detail_<%= feature.slug %>">
+                                <%= feature.title %>
+                                <svg id="feature-icon-<%= feature.slug %>" class="icon-inline icon-toggle svg-color--blue icon icon-plus-disc" style="margin-bottom: 0.03em;"><use xlink:href="#icon-plus-disc" class="symbol-icon"></use></svg>
+                                <%#= inline_svg("small/icon-plus-disc", class: "icon-inline icon-toggle svg-color--blue") %>
+                            </h4>
+                        <% else %>
+                            <h4 class="headline-6"><%= feature.title %></h4>
+                        <% end %>
+                        
                         <% if feature.has_key?("summary") %>
                             <%= Kramdown::Document.new(feature.summary).to_html %>
                         <% end %>
