Expand component not working on mobile; trying it with <a data-toggle>

--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -56,7 +56,7 @@ $underline: false !default;
     transition: $args;
 }
 @mixin transform($t){
-    -ms-transform: $t;
+    // -ms-transform: $t;
     -webkit-transform: $t;
     transform: $t;
 }
