Content development, Compliance page

--- a/source/platform/compliance.html.erb
+++ b/source/platform/compliance.html.erb
@@ -124,20 +124,6 @@ priority: "0.9"
         </div>
     </div>  
 
-    <div class="row align-center">
-        <div class="columns small-12 large-4">
-            <p>The HITRUST Common Security Framework (CSF) has become the preferred way to prove compliance in healthcare. HIPAA is the regulation from the U.S. government, while HITRUST is an industry-led initiative to provide a prescriptive framing of what it means to be 'HIPAA Compliant'.</p>
-            <p>The value of HITRUST within healthcare is that organizations can now finally skip past the he-said-she-said lawyering of audits. Now when a HITRUST certification is presented, organizations accept it immediately and move onto the next stage of the business relationship, saving you time and money.</p>
-        </div>
-        <div class="columsn small-12 large-4">
-            <div class="callout drop">
-                <h3 class="headline-4 group text-center">Get the case study</h3>
-
-                <%= partial("partials/snippets/form-hubspot", :locals => { :form_id => "075dabe1-e955-4285-8c0f-78b6dbfd9241" }) %>
-
-            </div>
-        </div>
-    </div>
 </section>
 
 <section class="section-article">
@@ -159,6 +145,25 @@ priority: "0.9"
         </div>
     </div>
 </section>
+<section class="section-article">
+    <div class="row group align-center">
+        <div class="columns small-12 text-center">
+            <h2 class="headline-3">GxP</h2>
+            <p class="lead">(subhead)</p>
+        </div>
+    </div>
+    <div class="row align-center">
+        <div class="columns small-12 medium-6 large-6">
+            <p>GxP content</p>
+            <p><a href="/academy/gxp-and-business-associates-does-it-exist-like-hipaa" title="GxP in the Academy">Learn more about GxP</a>. </p>
+            <%#= partial "partials/cards/discover", :locals => { :post => data.site.discover["6yNMzCKn84Q4qIsm0sWmUy"], :classes => "" } %>
+        </div>
+        <div class="columns small-12 medium-6 large-4">
+            <img class="group" src="https://images.contentful.com/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" alt="GxP Ready">
+        </div>
+    </div>
+</section>
+
 <!-- <section class="section-article container-color--gray-dark-grad text-center">
     <div class="row align-center">
         <div class="columns small-12 medium-8">
