--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -80,8 +80,7 @@ section.section-article.container-image--fixed.container-color--blue-bright-nois
         li
           a.link--white href="#"  Explanation of what the Platform does on top of AWS
         li
-          a.link--white href="#" > Total Cost of Ownership guide vs. building something similar your
-          | self on AWS
+          a.link--white href="#" > Total Cost of Ownership guide vs. building something similar yourself on AWS
     .columns.small-12.medium-6.large-6
       = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/discover/aws-hipaa", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }
 section.section-article
