working on page CTAs. A bit of a mess rn, it was handled upstream

--- a/source/layouts/platform.erb
+++ b/source/layouts/platform.erb
@@ -29,7 +29,7 @@
             <%= yield %>
             </main>
             <% if current_page.data.has_key?("ctaCustom") != true %>
-                <%= partial "partials/ctas/platform-cta" %>
+                <%#= partial "partials/ctas/platform-cta" %>
             <% end %>
         </div>
         <%= partial "partials/snippets/footer" %>
