--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -25,14 +25,12 @@ nav.hide-for-large.pad--sm.container-color--blue-alt
         i.fa.fa-icon.fa-angle-right
 section.section-article.container-gray-12
   .row.align-center
-    .columns.small-12.medium-10.large-7.text-center
-      h1.headline-3
-        strong End-to-end compliance 
-        | on AWS and Azure is possible.
+    .columns.small-12.medium-10.large-9.text-center
+      h1.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
       p.lead
         | The Datica Platform fills the compliance gaps on top of public clouds like AWS and Azure by combining the best technology available and mapping it to frameworks like HIPAA, HITRUST, GDPR, and GxP. Customers use Kubernetes-enabled orchestration to deploy containerized workloads to the Platform that are 
         strong guaranteed to be continuously compliant.
-      = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/technology", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
+      = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/technology", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
     / .columns.small-6.text-left
       =# partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
 
@@ -67,31 +65,31 @@ section.section-article.container-color--gray-dark-grad-top-bottom-noise
         .columns.medium-6
           = partial "partials/snippets/button", :locals => { :label => tier.cta.label, :title => tier.cta.label, :url => tier.cta.url, :button_classes => tier.cta.classes, :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
 section.section-article.container-image--fixed.container-color--blue-bright-noise
-  .row.align-middle.align-center
-    .columns.small-12.medium-6.large-6
+  .row.align-middle
+    .columns.small-12.medium-8.large-7
       h2.headline-3 You wouldn't build payment processing infrastructure to charge credit cards. You'd use Stripe.
       h3.headline-4.group So why waste money and take on unnecessary risk building your own compliance layer?
+      img.float-right-on-medium.logo-size--xlarge alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
       h4.headline-6.spaced-out Learn more about Datica on AWS
-      ul
+      ul.group
         li
-          a.link--white href="#"  Shared Responsibility overview
+          a.link--white href="#" Shared Responsibility overview
         li
-          a.link--white href="#"  Explanation of what the Platform does on top of AWS
+          a.link--white href="#" Explanation of what the Platform does on top of AWS
         li
-          a.link--white href="#" > Total Cost of Ownership guide vs. building something similar yourself on AWS
-    .columns.small-12.medium-6.large-6
+          a.link--white href="#" Total Cost of Ownership guide vs. building something similar yourself on AWS
+        li Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.
       = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/discover/aws-hipaa", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }
+
 section.section-article
   #companies.row.align-center
     .columns.small-12.large-12.text-center
-      h3.headline-3
-        strong World-class companies
-        | trust Datica
+      h3.headline-3 <strong>World-class companies</strong> trust Datica
       .logo-cloud.group
         - data.views.home.customers.each do |logo|
           img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") src="/public/img/customer-logos/sm/#{logo["file"]}.png" /
-      a.button.hollow href="/platform/success" title=("Customer Success Stories") 
-        | View Customer Success Stories
+      = partial "partials/snippets/button", :locals => { :label => "Read Customer Success Stories", :title => "View Platform pricing", :url => "/platform/success", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
+
         i.fa.fa-icon.fa-angle-right
 section#tech-hcms.section-article.container-color--gray-dark-grad-top-bottom-noise
   .row.align-center
@@ -116,36 +114,20 @@ section#tech-hcms.section-article.container-color--gray-dark-grad-top-bottom-noi
         .row.align-center
           .columns.small-12.text-center.group
             h2.headline-3.nomargin Healthcare Compliance Management System
-            /! <p class="lead"></p
         .row.align-center
           .columns.small-12.medium-6.large-7
             img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/3wzJLEqLHqs4kC2cAk4Msq/1131a6ae3d921e934fa8effa21802b35/hcms-dashboard.png?w=1200" /
           .columns.small-12.medium-6.large-4
             p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across all customer environments.
 
-
-section.section-article.container-color--gray-light
-  .row.group
-    .column.text-center
-      .group
-        img.log-size--medium alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png" /
-      p
-        | Datica is an 
-        strong Amazon Web Services Advanced Tier Technology Partner 
-        | with a 
-        strong Healthcare Competency 
-        | focus.
-
 aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]" 
   .row.align-center
     .columns.small-12.medium-10.large-10.text-center
-      h2.headline-3
-        strong End-to-end compliance 
-        | on AWS and Azure is possible.
+      h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
   .row.align-center
-    .columns.small-6.text-right
+    .columns.small-6.large-4.text-right
       = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow--inverted" }
-    .columns.small-6.text-left
+    .columns.small-6.large-6.text-left
       = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/technology", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
 
 
