Broken link fix

--- a/source/platform/technology.html.erb
+++ b/source/platform/technology.html.erb
@@ -240,7 +240,7 @@ ctaCustom: true
             <% = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow--inverted" } %>
         </div>
         <div class="columns small-12 large-4">
-            <% = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/technology", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" } %>
+            <% = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" } %>
         </div>
     </div>
 </section>
